// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PerpsView should render correctly in connected state 1`] = `
<MockedScreenView>
  <View
    style={{}}
  >
    <View
      style={{}}
    >
      <Text
        accessibilityRole="text"
      >
        Perps Trading (Dev Mode)
      </Text>
      <Text
        accessibilityRole="text"
      >
        Core Controller & Services Testing
      </Text>
      <Text
        accessibilityRole="text"
      >
        Network: 
        MAINNET
      </Text>
      <Text
        accessibilityRole="text"
      >
        Balance: $
        1000
      </Text>
    </View>
    <View
      style={{}}
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.get_account_balance
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.deposit_funds
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.withdrawal.title
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.switch_to_testnet
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.view_markets
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.positions
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          Transactions History
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={{}}
    >
      <Text
        accessibilityRole="text"
      >
        Popular Markets
      </Text>
      <View
        style={{}}
      >
        <View
          style={{}}
        >
          <View
            style={{}}
          >
            <Text
              accessibilityRole="text"
            >
              BTC
            </Text>
            <Text
              accessibilityRole="text"
            >
              $
              50,000
            </Text>
            <Text
              accessibilityRole="text"
            >
              +
              2.50
              %
            </Text>
            <View
              style={{}}
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Long
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Short
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
        <View
          style={{}}
        >
          <View
            style={{}}
          >
            <Text
              accessibilityRole="text"
            >
              ETH
            </Text>
            <Text
              accessibilityRole="text"
            >
              $
              3,000
            </Text>
            <Text
              accessibilityRole="text"
            >
              -1.20
              %
            </Text>
            <View
              style={{}}
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Long
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Short
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
        <View
          style={{}}
        >
          <View
            style={{}}
          >
            <Text
              accessibilityRole="text"
            >
              SOL
            </Text>
            <Text
              accessibilityRole="text"
            >
              $
              100
            </Text>
            <Text
              accessibilityRole="text"
            >
              +
              5.00
              %
            </Text>
            <View
              style={{}}
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Long
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Short
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
        <View
          style={{}}
        >
          <View
            style={{}}
          >
            <Text
              accessibilityRole="text"
            >
              ARB
            </Text>
            <Text
              accessibilityRole="text"
            >
              $
              2
            </Text>
            <Text
              accessibilityRole="text"
            >
              -3.00
              %
            </Text>
            <View
              style={{}}
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Long
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Short
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
      <View
        style={{}}
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <Text
            accessibilityRole="text"
          >
            Trade INVALID asset →
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</MockedScreenView>
`;

exports[`PerpsView should render correctly when initializing 1`] = `
<MockedScreenView>
  <View
    style={{}}
  >
    <View
      style={{}}
    >
      <Text
        accessibilityRole="text"
      >
        Perps Trading (Dev Mode)
      </Text>
      <Text
        accessibilityRole="text"
      >
        Core Controller & Services Testing
      </Text>
      <Text
        accessibilityRole="text"
      >
        Network: 
        MAINNET
      </Text>
      <Text
        accessibilityRole="text"
      >
        Balance: $
        1000
      </Text>
    </View>
    <View
      style={{}}
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.get_account_balance
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.deposit_funds
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.withdrawal.title
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.switch_to_testnet
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.view_markets
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          perps.buttons.positions
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
      >
        <Text
          accessibilityRole="text"
        >
          Transactions History
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={{}}
    >
      <Text
        accessibilityRole="text"
      >
        Popular Markets
      </Text>
      <View
        style={{}}
      >
        <View
          style={{}}
        >
          <View
            style={{}}
          >
            <Text
              accessibilityRole="text"
            >
              BTC
            </Text>
            <Text
              accessibilityRole="text"
            >
              $
              50,000
            </Text>
            <Text
              accessibilityRole="text"
            >
              +
              2.50
              %
            </Text>
            <View
              style={{}}
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Long
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Short
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
        <View
          style={{}}
        >
          <View
            style={{}}
          >
            <Text
              accessibilityRole="text"
            >
              ETH
            </Text>
            <Text
              accessibilityRole="text"
            >
              $
              3,000
            </Text>
            <Text
              accessibilityRole="text"
            >
              -1.20
              %
            </Text>
            <View
              style={{}}
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Long
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Short
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
        <View
          style={{}}
        >
          <View
            style={{}}
          >
            <Text
              accessibilityRole="text"
            >
              SOL
            </Text>
            <Text
              accessibilityRole="text"
            >
              $
              100
            </Text>
            <Text
              accessibilityRole="text"
            >
              +
              5.00
              %
            </Text>
            <View
              style={{}}
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Long
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Short
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
        <View
          style={{}}
        >
          <View
            style={{}}
          >
            <Text
              accessibilityRole="text"
            >
              ARB
            </Text>
            <Text
              accessibilityRole="text"
            >
              $
              2
            </Text>
            <Text
              accessibilityRole="text"
            >
              -3.00
              %
            </Text>
            <View
              style={{}}
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Long
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    {},
                    {},
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                >
                  Short
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
      <View
        style={{}}
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <Text
            accessibilityRole="text"
          >
            Trade INVALID asset →
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</MockedScreenView>
`;

exports[`PerpsView should render correctly with error state 1`] = `
<MockedScreenView>
  <View>
    <View>
      <Text
        accessibilityRole="text"
      >
        perps.connection.failed
      </Text>
      <Text
        accessibilityRole="text"
      >
        perps.connection.error_message
      </Text>
      <Text
        accessibilityRole="text"
      >
        Connection error
      </Text>
    </View>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      loading={false}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Text
        accessibilityRole="text"
      >
        perps.connection.retry_connection
      </Text>
    </TouchableOpacity>
  </View>
</MockedScreenView>
`;
